# paper-degist

./: .env.example  .gitignore  BUREAU.md  CLAUDE.md  DEVLOG.md  README.md  bugs.md  pyproject.toml  user-stories.md
bugs/: resolve-oa-false-closed-when-no-url-for-pdf.md
canon/: 00-overview.md  _compile-state.json  _verify.json
doc/: cli-manual.md  us40-qa-guide.md  us40-sciencedirect-poc.md
features/: abstract_filter.feature  bot_walled.feature  browser_fetch.feature  browser_fetch_batch.feature  browser_fetch_lazyload.feature  browser_fetch_wall.feature  browser_up.feature  clickable_doi.feature  collect_papers.feature  convert_html.feature  convert_pdf.feature  dedup_inputs.feature  discover.feature  discover_batch.feature  embed_text.feature  enrich_abstract.feature  fetch_one.feature  ocr_batch.feature  ocr_page.feature  ocr_report.feature  page_number_markers.feature  parse_url.feature  provenance_frontmatter.feature  rank_cited.feature  recover_blocked.feature  render_pdf.feature  resolve_oa.feature  score_gold.feature  score_ocr.feature  snowball.feature  title_doi.feature  verify_filename.feature
user-stories/: us-01-parsing-the-links.md  us-02-fetching-the-paper-file.md  us-03-converting-pdf.md  us-04-formatting-paper.md  us-05-converting-html.md  us-06-importing-paper.md  us-07-compiling-paper.md  us-08-rating-paper.md  us-09-resolving-open-access.md  us-10-resolving-doi-from-title.md  us-11-clickable-doi-in-manifest.md  us-12-recognize-bot-walled-sources.md  us-13-verify-filename-matches-title.md  us-14-dedup-inputs-by-doi.md  us-15-browser-fetch-bot-walled.md  us-16-warm-browser-across-batch.md  us-17-recover-blocked-to-browser.md  us-18-launch-dev-mode-browser.md  us-19-render-pdf-pages.md  us-20-ocr-one-page-registry.md  us-32-rank-cited.md  (+22 more)
(+171 files in other folders)
