[project]
name = "paper-degist"
version = "0.1.0"
description = "Convert papers (PDF/HTML) into Markdown for an LLM wiki"
readme = "README.md"
authors = [
    { name = "Flash Hu", email = "idisblueflash@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
paper-degist = "paper_degist:main"
parse-url = "paper_degist.parse_url:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "pytest>=9.1.1",
]
