[project]
name = "paper-degist"
version = "0.1.0"
description = "Convert papers (PDF/HTML) into Markdown for an LLM wiki"
readme = "README.md"
authors = [
    { name = "Flash Hu", email = "idisblueflash@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.3",
    "playwright>=1.61.0",
    "pypdf>=6.14.2",
    "typer>=0.26.8",
]

[project.scripts]
paper-degist = "paper_degist:main"
parse-url = "paper_degist.parse_url:main"
fetch-one = "paper_degist.fetch_one:main"
convert-html = "paper_degist.convert_html:main"
resolve-oa = "paper_degist.resolve_oa:main"
browser-up = "paper_degist.browser_up:main"
browser-fetch = "paper_degist.browser_fetch:main"
render-pdf = "paper_degist.render_pdf:main"
recover-blocked = "paper_degist.recover_blocked:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "pytest>=9.1.1",
]
